remove quiz-container div fix issue with traner acedemy not resizing correctly adjust angle to trainer card. realign hero elements

--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,8 @@
   --font-size-md: 26px;
   --font-size-lg: 42px;
   --font-size-xl: 68px;
+  --margin-10: 15px;
+  --margin-20: 20px;
 }
 /* xs: 0,
 sm: 576px,
@@ -203,6 +205,7 @@ button {
 body {
   background-image: url("./assets/dot-grid.webp");
 }
+
 h1 {
   display: flex;
   flex-direction: column;
@@ -226,12 +229,13 @@ h2 {
   margin-inline: auto;
   padding: var(--spacing-md);
 }
+
 /* #region header */
 .header {
   width: 100%;
   background-color: var(--paper-white);
   box-shadow: 8px 4px 15px 0px rgba(0, 0, 0, 1);
-  margin-bottom: 20px;
+  margin-bottom: var(--margin-10);
 }
 
 .header__inner {
@@ -293,37 +297,58 @@ h2 {
   background-color: var(--primary-fixed-dim);
 }
 /* #endregion header */
-/* #region homepage__hero */
-
-.homepage__hero-trainer {
-  margin-top: 20px;
+/* #region homepage */
+/* #region hero */
+.quiz__hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.homepage__hero-trainer,
+.quiz__hero-trainer {
   background-color: var(--primary-container);
-  transform: rotate(-4deg);
+
   box-shadow: 8px 4px 0px 0px var(--inverse-surface);
   border: 5px solid black;
-  padding: var(--spacing-md) var(--spacing-md);
   width: fit-content;
   text-shadow: 1px 1px var(--wtp-shadow);
-  margin-bottom: 20px;
+  margin-bottom: var(--margin-10);
 }
-
-.homepage__hero p {
-  width: fit-content;
-  font-weight: bold;
-  padding: var(--spacing-md) var(--spacing-lg);
+.homepage__hero-trainer {
+  transform: rotate(-3deg);
+  padding: var(--spacing-md) var(--spacing-md);
+}
+.quiz__hero-trainer {
+  margin-inline: auto;
+  margin-top: var(--margin-10);
+  transform: rotate(-3deg);
+  width: min-content;
+  padding: var(--spacing-xs) var(--spacing-sm);
+}
+.homepage__hero p,
+.quiz__hero p {
+  background-color: var(--paper-white);
   box-shadow: 8px 8px 0px 0px var(--inverse-surface);
   border: 5px solid black;
-  margin-bottom: 20px;
+  margin-bottom: var(--margin-10);
+}
+.homepage__hero p {
+  padding: var(--spacing-md) var(--spacing-lg);
+  font-weight: bold;
+}
+.quiz__hero p {
+  padding: var(--spacing-sm) var(--spacing-md);
 }
 
 .homepage__hero-img {
   display: block;
   margin-inline: auto;
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: var(--margin-10);
 }
 
-/* #endregion homepage__hero */
+/* #endregion hero */
 
 /* #region modules__casing*/
 
@@ -465,7 +490,11 @@ h2 {
   rotate: -25deg;
 }
 /* #endregion */
+/* #endregion homepage */
+/* #region quizpage */
 
+/* endregion quizpage */
+/* #region footer */
 .footer {
   display: flex;
   align-items: center;
@@ -476,7 +505,7 @@ h2 {
   background-color: var(--electric-blue);
   border-top: 8px solid black;
 }
-
+/* #endregion footer */
 /* xs: 0,
 sm: 576px,
 md: 768px,
@@ -496,6 +525,14 @@ xxl: 1400px */
     display: block;
     margin-inline: auto;
     width: 500px;
+  }
+
+  .quiz__hero-trainer {
+    width: fit-content;
+  }
+  .quiz__hero p {
+    width: 545px;
+    padding: var(--spacing-md) var(--spacing-xl);
   }
   .header__inner {
     margin-inline: auto;
